package com.mgriffin.pricing;

public interface Discount {

    double calculate (double amount);

}
