package com.mgriffin.pricing;

public interface DiscountFactory {

    Discount getDiscount ();

}
